syntax = "proto3";
option go_package = "github.com/daneofmanythings/calcuroller/internal/grpc/roller";
package google.rpc;
import "google/protobuf/any.proto";

message PingRequest {}

message PingResponse { string ping = 1; }

message RollRequest {
  string dice_string = 1;
  string caller_id = 2;
};

message RollData {
  string literal = 1;
  bytes metadata = 2; // passing the metadata as serialized json
};

message RollResponseData {
  RollData data = 1;
  string caller_id = 2;
};

message MyStatus {
  int32 code = 1;
  string message = 2;
  repeated google.protobuf.Any details = 3;
};

message RollResponse {
  oneof message {
    RollResponseData data = 1;
    MyStatus status = 2;
  }
};
